Docs: add more description in swagger
